# docs/swagger.json
@@ -127,6 +127,19 @@
                 ],
                 "responses": {}
             }
+        },
+        "/gemini/tune": {
+            "get": {
+                "description": "tune gemini model with history data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gemini"
+                ],
+                "summary": "TuneModel",
+                "responses": {}
+            }
         }
     },
     "definitions": {
